# TextToSQL_Backend_Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  schema_rag_pipeline.py  schema_retriever.py
chroma_db/: chroma.sqlite3
core/: prompt_loader.py  prompt_registry.py  settings.py  state.py
datasets/: analytics_reporter_eval.json  followup_detector_level1.json  followup_detector_level2.json  followup_rewriter_eval.json  intent_classifier_level1.json  intent_classifier_level2.json  query_planner_eval.json  schema_summarizer_eval.json  sql_agent_eval.json  validator_eval.json
evaluation/: dataset_builder.py  ground_truth.py  metrics_config.py  ragas_evaluator.py  table_metrics.py
evaluation/results/: retrieval_20260328_183035.json  retrieval_20260329_120612.json
experiments/: queries_lists.py
llm/: base.py  groq_client.py  openai_client.py
pipeline/: draw_graph.py  graph.py
pipeline/edges/: execution_router.py  followup_router.py  intent_classification_router.py  rewriter_router.py  validation_router.py
pipeline/nodes/: analytics_reporter.py  followup_detector.py  followup_rewriter.py  intent_classifier.py  memory_agent.py  orchestrator.py  query_planner.py  schema_retriver.py  schema_summarizer.py  sql_agent.py  sql_executor.py  step_router.py  validator.py
prompts/: follow_up_prompt.yaml  followup_rewriter_prompt.yaml  intent_classifier_prompt.yaml  nl_response_prompt.yaml  nl_response_prompt_v2.yaml  nl_response_prompt_v3.yaml  query_planner_prompt.yaml  schema_summarizer_prompt.yaml  schema_summarizer_prompt_v3.yaml  schema_summarizer_prompt_v4.yaml  schema_summarizer_prompt_v5.yaml  sql_agent_prompt.yaml  validation_prompt.yaml  validation_prompt_v2.yaml  validation_prompt_v3.yaml  validation_prompt_v4.yaml  validation_prompt_v5.yaml
schema/: follow_up_schema.py  followup_rewriter_schema.py  intent_classification_schema.py  natural_response_schema.py  planner_schema.py  sql_agent_schema.py  validation_schema.py
tests/: conftest.py
tests/behavioral/: conftest.py  test_followup_detector_behavior.py  test_intent_classifier_behavior.py
tests/evaluation/: conftest.py  test_analytics_reporter_eval.py  test_followup_rewriter_eval.py  (+4 more)
(+12 files in other folders)
