[project]
name = "ecom-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langsmith>=0.7.7",
    "pandas>=3.0.1",
    "psycopg>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "torch>=2.0.0",
    "sqlalchemy>=2.0.47",
    "sqlglot>=29.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "deepeval>=1.4.0",
    "ragas>=0.2.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live database and ChromaDB (deselect with '-m not integration')",
    "llm_eval: requires LLM API keys, results are non-deterministic",
]
asyncio_mode = "auto"
